--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,17 @@
     "downlevelIteration": true,
     "strict": true,
     "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "typeRoots" : ["./node_modules/@types"]
+  },
+  "include": [
+    "./src/**/*",
+    "./**/*.js"
+  ]
 }
