--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.7.2",
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-redux": "^7.1.3",
@@ -18,14 +19,23 @@
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/runtime": "^7.7.2",
+    "@react-native-community/eslint-config": "^0.0.5",
     "@types/jest": "^24.0.23",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.60.22",
     "@types/react-redux": "^7.1.5",
     "@types/react-test-renderer": "^16.9.1",
     "babel-jest": "^24.9.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-typescript": "^6.1.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.57.0",
+    "prettier": "^1.19.1",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "16.9.0",
     "ts-jest": "^24.1.0",
