--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
+    "baseUrl": ".",
     "typeRoots" : ["./typings", "./node_modules/@types"],
     "paths": {
       "*" : ["typings/*"],
